--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ void main() {
 <script src="lib/dat.gui.min.js"></script>
 <script src="lib/three.orbitcontrols.js"></script>
 <script src="lib/three.transformcontrols.js"></script>
-<script src="src/index.js"></script>
+<script src="build/gp.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
